--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@
 }
 
 .cella {
-    width: calc(100 / 10);
+    width: calc(100% / 10);
     text-align: center;
     height: 150px;
+    border: 1px solid red;
 }
